--- a/Practice/app/src/main/AndroidManifest.xml
+++ b/Practice/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".datastore.DataStoreActivity">
+        </activity>
     </application>
 
 </manifest>
