wxj：Add Fragment & Activity lifecycle.

--- a/Practice/app/src/main/AndroidManifest.xml
+++ b/Practice/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         </activity>
         <activity android:name=".datastore.DataStoreActivity">
         </activity>
+        <activity android:name=".fragment.ContainerActivity">
+        </activity>
     </application>
 
 </manifest>
