wxj：根据安卓艺术探索完成 aidl 服务端与客户端代码编写

--- a/AIDLServiceTest/app/build.gradle
+++ b/AIDLServiceTest/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "wxj.ipclearn"
+        applicationId "wxj.aidlservicetest"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
@@ -29,6 +29,8 @@ android {
     }
 }
 
+
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -36,5 +38,4 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'org.jetbrains:annotations-java5:15.0'
 }
