--- a/AIDLServiceTest/app/src/main/AndroidManifest.xml
+++ b/AIDLServiceTest/app/src/main/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="wxj.ipclearn">
+    package="wxj.aidlservicetest">
 
     <application
-        android:name=".AppApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,12 +17,13 @@
             </intent-filter>
         </activity>
 
-        <service
-            android:name="wxj.ipclearn.messenger.MessengerService"
-            android:process=":remote" />
+        <service android:name="wxj.aidlservicetest.BookManagerService">
 
-        <activity android:name=".messenger.MessengerActivity">
-        </activity>
+            <intent-filter>
+                <action android:name="wxj.remote.call"/>
+            </intent-filter>
+
+        </service>
     </application>
 
 </manifest>
