wxj：完成 socket 章节示例代码

--- a/IPCLearn/app/src/main/AndroidManifest.xml
+++ b/IPCLearn/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="wxj.ipclearn">
 
-    <uses-permission android:name="wxj.ipclearn.PROVIDER"/>
+    <uses-permission android:name="wxj.ipclearn.PROVIDER" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".AppApplication"
@@ -13,28 +14,34 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-            <!-- <intent-filter>
+
+            <!--
+             <intent-filter>
                  <action android:name="android.intent.action.MAIN" />
 
                  <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>-->
+             </intent-filter>
+            -->
         </activity>
 
         <service
             android:name=".messenger.MessengerService"
             android:process=":remote" />
 
-        <activity android:name=".messenger.MessengerActivity"></activity>
-
+        <activity android:name=".messenger.MessengerActivity" />
 
         <provider
             android:name=".contentprovider.BookProvider"
             android:authorities="wxj.ipclearn.contentprovider.BookProvider"
             android:permission="wxj.ipclearn.PROVIDER"
-            android:process=":provider"
-          />
+            android:process=":provider" />
 
         <activity android:name=".contentprovider.ProviderActivity">
+        </activity>
+
+        <service android:name=".socket.TCPServerService"></service>
+
+        <activity android:name=".socket.TCPClientActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
