--- a/WebsocketTest/app/src/main/AndroidManifest.xml
+++ b/WebsocketTest/app/src/main/AndroidManifest.xml
@@ -12,15 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-
-        </activity>
-        <activity android:name=".NettySocketActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
+        <activity android:name=".NettySocketActivity"></activity>
+
     </application>
 
 </manifest>
