--- a/InterviewNote/build.gradle
+++ b/InterviewNote/build.gradle
@@ -1,17 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    
     repositories {
-        mavenCentral()
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
-        jcenter()
         google()
-        mavenLocal()
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0'
-        
+        classpath "com.android.tools.build:gradle:4.0.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,13 +14,8 @@ buildscript {
 
 allprojects {
     repositories {
-        //新加
-        mavenCentral()
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
-        jcenter()
-        //新加
-        mavenLocal()
         google()
+        jcenter()
     }
 }
 
