--- a/PracticeApplication/app/src/main/AndroidManifest.xml
+++ b/PracticeApplication/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="wxj.me.practice">
+    package="wxj.me.practice">
 
     <application
         android:allowBackup="true"
@@ -9,17 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.ViewBasicActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".datastore.DataStoreActivity">
+        <activity android:name=".TestActivity">
         </activity>
-        <activity android:name=".fragment.ContainerActivity">
-        </activity>
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".datastore.DataStoreActivity" />
+        <activity android:name=".fragment.ContainerActivity" />
     </application>
 
 </manifest>
