wxj:添加底部图标

--- a/love_space/love_space/pubspec.yaml
+++ b/love_space/love_space/pubspec.yaml
@@ -23,6 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  # 加载 svg 图片
+  flutter_svg: ^0.22.0
   dio: ^4.0.0
 
 
@@ -44,6 +47,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+   - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
