--- a/love_space/love_space/pubspec.yaml
+++ b/love_space/love_space/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
 
   # 加载 svg 图片
   flutter_svg: ^0.22.0
+  # 轮播 https://pub.dev/packages/flutter_swiper
+  flutter_swiper: ^1.1.6
+  # 网络
   dio: ^4.0.0
 
 
