--- a/love_space/love_space/pubspec.yaml
+++ b/love_space/love_space/pubspec.yaml
@@ -24,8 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # 加载 svg 图片
-  flutter_svg: ^0.22.0
+  # 常用工具集 https://pub:dev/packages/flustars
+  flustars: ^2.0.1
+
   # 轮播 https://pub.dev/packages/flutter_swiper
   flutter_swiper: ^1.1.6
   # 网络
